[package]
name = "sqlxmq"
version = "0.4.1"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Diggsey/sqlxmq"
description = "A reliable job queue using PostgreSQL as a backing store"
readme = "README.md"
documentation = "https://docs.rs/sqlxmq"

[workspace]
members = ["sqlxmq_macros", "sqlxmq_stress"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.3", features = ["full"] }
dotenv = "0.15.0"
chrono = "0.4.19"
uuid = { version = "1.1.2", features = ["v4"] }
log = "0.4.14"
serde_json = "1.0.64"
serde = "1.0.124"
sqlx = { version = "0.6", features = ["postgres"] }
sqlxmq_macros = { version = "0.4.1", path = "sqlxmq_macros" }
anymap2 = "0.13.0"
diesel = { version = "2.0.0-rc.0", features = ["postgres", "chrono", "uuid"] }
tokio-postgres = "0.7.6"
thiserror = "1.0.31"

[dependencies.deadpool-diesel]
git = "https://github.com/bikeshedder/deadpool"
branch = "feature/diesel-2"
features = ["postgres"]

[features]
default = ["runtime-tokio-native-tls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
futures = "0.3.13"
