[package]
name = "sqlxmq_stress"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlxmq = { path = ".." }
tokio = { version = "1.4.0", features = ["full"] }
dotenv = "0.15.0"
sqlx = "0.6.0"
serde = "1.0.125"
lazy_static = "1.4.0"
futures = "0.3.13"
diesel = { version = "2.0.0-rc.0", features = ["postgres", "chrono", "uuid"] }

[dependencies.deadpool-diesel]
git = "https://github.com/bikeshedder/deadpool"
branch = "feature/diesel-2"
features = ["postgres"]
